refactor: improved the dashboard section